added posts and some conditional rendering

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,6 +1,20 @@
 ---
+const pageTitle = "About Code Kitchen";
 
+const identity = {
+  firstName: "Matthew",
+  country: "USA",
+  occupation: "Software Developer",
+  hobbies: ["hockey", "coding", "more coding"],
+};
+
+const skills = ["HTML", "CSS", "JavaScript", "React", "Astro", "Tailwind"];
+
+const happy = true;
+const finished = false;
+const goal = 3;
 ---
+
 
 <html lang="en">
 	<head>
@@ -8,15 +22,32 @@
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
+		<title>{pageTitle}</title>
 	</head>
 	<body>
         <a href="/">Home</a>
         <a href="/about/">About</a>
         <a href="/blog/">Blog</a>
-		<h1>About Code Kitchen</h1>
+		<h1>{pageTitle}</h1>
         <h2>Some about info here for the blog</h2>
 
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate libero mollitia quae debitis deleniti sequi architecto quis quas? Deleniti esse perferendis ipsam eaque quod quis doloremque cumque recusandae illo quisquam.</p>
+
+		<p>Here are a few facts about me: </p>
+
+		<ul>
+			<li>My name is {identity.firstName}</li>
+			<li>I live in {identity.country} and I work as a {identity.occupation}.</li>
+			{identity.hobbies.length >= 2 && 
+				<li>Two of my hobbies are: {identity.hobbies[0]} and {identity.hobbies[1]}</li>
+			}
+		</ul>
+		<ul>
+			{skills.map((skill) => <li>{skill}</li>)}
+		</ul>
+
+		{happy && <p>I am happy to be learning Astro!</p>}
+		{finished && <p>I finished this tutorial.</p>}
+		{goal === 3 ? <p>My goal is to finish in 3 days.</p> : <p>My goal is not 3 days.</p>}
 	</body>
 </html>
