--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,17 +1,19 @@
 ---
-const pageTitle = "My Astro Learning Blog";
----
+import '../styles/global.css';
+import BaseLayout from '../layouts/BaseLayout.astro';
+import Header from '../components/Header.astro';
+import Footer from '../components/Footer.astro'
 
-<body>
-    <a href="/">Home</a>
-    <a href="/about/">About</a>
-    <a href="/blog/">Blog</a>
-  
-    <h1>{pageTitle}</h1>
+
+const pageTitle = "My Astro Journey";
+
+---
+<BaseLayout pageTitle={pageTitle}>
     <p>This is where I will post about my journey learning Astro.</p>
     <ul>
         <li><a href="/posts/post-1">Post 1</a></li>
         <li><a href="/posts/post-2">Post 2</a></li>
         <li><a href="/posts/post-3">Post 3</a></li>
     </ul>
-  </body>
+
+</BaseLayout>
